@@ -203,7 +203,7 @@ function edit_comment(basetext, user_log_message)
 
    local tmp, tname = temp_file()
    if (tmp == nil) then return nil end
-   basetext = "MT: " .. string.gsub(basetext, "\n", "\nMT: ") .. "\n"
+   basetext = "MTN: " .. string.gsub(basetext, "\n", "\nMTN: ") .. "\n"
    if user_log_message == "" then
       tmp:write("\n")
    else
@@ -224,7 +224,7 @@ function edit_comment(basetext, user_log_message)
    local res = ""
    local line = tmp:read()
    while(line ~= nil) do 
-      if (not string.find(line, "^MT:")) then
+      if (not string.find(line, "^MTN:")) then
          res = res .. line .. "\n"
       end
       line = tmp:read()
